force-app/main/default/objects/Frustrated_Freight_Line__c/Frustrated_Freight_Line__c.object-meta.xml
<CustomObject>
    <label>Frustrated Freight Line</label>
    <nameField>
        <displayFormat>FFL-{000}</displayFormat>
        <label>Frustrated Freight Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Frustrated Freight Lines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>