force-app/main/default/objects/Frustrated_Freight_Line__c/fields/Part__c.field-meta.xml
<CustomField>
    <fullName>Part__c</fullName>
    <formula>Product__r.Part__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Part #</label>
    <type>Text</type>
</CustomField>