force-app/main/default/objects/Frustrated_Freight_Line__c/fields/Receiving_Frustrated_Freight__c.field-meta.xml
<CustomField>
    <fullName>Receiving_Frustrated_Freight__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Receiving-Frustrated Freight</label>
    <referenceTo>Receiving_Frustrated_Freight__c</referenceTo>
    <relationshipLabel>Frustrated Freight Lines</relationshipLabel>
    <relationshipName>Frustrated_Freight_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>